tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_multiple_resolution_errors/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
warning: unused variable z
  ┌─ src/main.nr:4:16
  │
4 │            let z = y + a;
  │                - unused variable
  │

error: Could not resolve 'foo' in path
  ┌─ src/main.nr:3:20
  │
3 │            let y = foo::bar(x);
  │                    ---
  │

error: cannot find `a` in this scope
  ┌─ src/main.nr:4:24
  │
4 │            let z = y + a;
  │                        - not found in this scope
  │

Aborting due to 2 previous errors
